<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <Button
        android:id="@+id/targil1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="targuil_1"
        android:text="@string/targuil1" />

    <Button android:id="@+id/targil2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="targuil_2"
        android:text="@string/targuil2" />

    <Button android:id="@+id/targil3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="targuil_3"
        android:text="@string/targuil3" />

    <Button android:id="@+id/targil4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/targuil4" />

    <Button android:id="@+id/targil5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/targuil5" />
</LinearLayout>